[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/background.png" type="Texture" id=1]
[ext_resource path="res://assets/font/Abuget.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GameOver.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/restart.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player_fish.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/head.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Remove_the_head"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 530.419, 607.634 ), Vector2( 530.419, 586.134 ), Vector2( 496.419, 572.134 ), Vector2( 450.919, 598.134 ), Vector2( 413.419, 628.134 ), Vector2( 413.919, 669.134 ) ]
}

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/font/Abuget.ttf"

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="GameOver" type="TextureRect" parent="."]
visible = false
margin_right = 700.0
margin_bottom = 3646.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEnd" type="TextureRect" parent="."]
margin_right = 700.0
margin_bottom = 3646.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_fish" type="Sprite" parent="GameEnd"]
position = Vector2( 547.329, 682.478 )
texture = ExtResource( 5 )

[node name="head" type="Sprite" parent="GameEnd"]
position = Vector2( 530.419, 607.634 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameEnd"]
root_node = NodePath("../head")
anims/Remove_the_head = SubResource( 1 )

[node name="EasterEgg" type="Label" parent="GameEnd"]
visible = false
margin_left = 124.768
margin_top = 661.122
margin_right = 551.768
margin_bottom = 790.122
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Why the oxygen though ?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.5
margin_top = 181.224
margin_right = 140.5
margin_bottom = 307.224
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.8173
margin_top = 287.879
margin_right = 91.1827
margin_bottom = 350.879
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Depth" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.8173
margin_top = 374.691
margin_right = 91.1827
margin_bottom = 437.691
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Depth"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -95.7555
margin_top = 469.406
margin_right = 294.245
margin_bottom = 685.406
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
